// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/ GET should return 'hello world' 1`] = `"Hello World!"`;

exports[`/api /GET programs -- returns all programs 1`] = `
Array [
  Object {
    "description": "Extended health coverage for adults with low incomes",
    "detailLinks": Array [],
    "details": "What is it?
The Alberta Adult Health Benefit (AAHB) program supports Albertans with limited incomes by covering the cost of prescription drugs, dental services, optical services, emergency ambulance, and diabetic supplies. The AAHB pays for supplies that are not available through standard Alberta health coverage.

Who is eligable?
Residents of Alberta are eligible for the AAHB if they meet the income criteria as well as one of the following conditions:
- Leaving Alberta Works Income Support or Assured Income for the Severely Handicapped (AISH) and has income from employment, self-employment, or the Canada Pension Plan Disability program
- High ongoing prescription drug needs
- Pregnant

An individual or family is NOT eligible for AAHB if they are receiving extended health benefits from other government programs including: 
- Income Support/AISH
- Child and Youth Supports (Child Health Benefit)
- Government Funded Indigenous Health Programs
- Sponsored Immigrants or Refugees
- Seniors (65+) Health Programs

What do I need to apply?
- SIN numbers for all family members
- Alberta Personal Health Number
- Completed your taxes so that Alberta Health Services can check your income

For more information and to find the application follow the link below",
    "externalLink": "www.alberta.ca/alberta-adult-health-benefit.aspx",
    "guid": "hp5mupqcVY8ZMiKg7Q91Uoi4Wf",
    "tags": Array [
      "Health",
      "Alberta",
      "Adult",
    ],
    "title": "Adult Health Benefit",
  },
  Object {
    "description": "Money to support eligible working families to boost their income",
    "detailLinks": Array [],
    "details": "What is it?
The Alberta Family Employment Tax Credit (AFETC) is a non-taxable benefit given twice a year to eligible families who earn money from work.

Who is Eligible?
To be eligible for the AFETC, you must:
- Be a parent of one or more children under 18
- Be a resident of Alberta for at least one month prior to receiving the credit
- File a tax return
- Earn a family working income within the eligible income range

What do I need to apply?
- File your taxes
- Receiving the Canada Child Benefit (if you are not already receiving the Canada Child Benefit please check that benefit for details on how to apply)

For more information follow the link below",
    "externalLink": "www.alberta.ca/alberta-family-employment-tax-credit.aspx",
    "guid": "OGR28icdrofstoYETvIGg19XAv",
    "tags": Array [
      "Children",
      "Alberta",
      "Tax",
    ],
    "title": "Alberta Family Employment Tax Credit",
  },
  Object {
    "description": "Increases the income for seniors receiving Old Age Security",
    "detailLinks": Array [],
    "details": "What is it?
The Alberta Seniors Benefit (ASB) program provides extra monthly income to seniors receiving Old Age Security (OAS) and Guaranteed Income Supplement (GIS).

Who is eligible?
- Seniors over 65 years old
- Residents of Alberta
- Have income lower than the cut off

What do I need to apply?
- Copy of a Birth or Baptismal Certificate
- If you don't have a Birth or Baptismal Certificate then you can use: Canada Entry Documents, Canadian Citizenship Document, Indigenous Status Card, or a Passport
- Proof of eligibility for Old Age Security (usually an Old Age Security Notice of Entitlement Letter) 
- Direct Deposit information (all ASB money is paid via direct deposit)

To apply you will need to complete the Seniors Financial Assistance Package from the link below",
    "externalLink": "www.seniors-housing.alberta.ca/seniors/seniors-benefit-program.html",
    "guid": "JIcpL1cap5Eg0ikPk2tecp6JG7",
    "tags": Array [
      "Alberta",
      "Seniors",
    ],
    "title": "Alberta Seniors Benefit",
  },
  Object {
    "description": "Regular monthly income for those with significant disabilities that limit the ability to work",
    "detailLinks": Array [],
    "details": "What is it?
Assured Income for the Severely Handicapped (AISH) provides regular income to cover basics such as shelter, food, and clothing for those with significant disabilities that prevent them from working.  It also includes health care benefits, child benefits, and extra money to cover personal costs.  

Who is eligible?
To receive AISH you must be:
- At least 18 years old and not eligible to receive an Old Age Security pension
- Live in Alberta and are a Canadian citizen or permanent resident
- Must have a disability that is likely to remain permanent
- Have a disability that is the main factor limiting your ability to earn a living
- Have income and assets under the AISH limits

What do I need to apply?
- Identification for you and any family members
- Documentation of the disability and its effects
- Contact information for a family doctor
- Proof of income including tax returns and pay stubs if applicable
- Proof of residence in Alberta
- Supporting proof of assets

For more information and to find the application follow the link below",
    "externalLink": "www.alberta.ca/aish.aspx",
    "guid": "1lKYPN8nNaAMldGufGZNEwfjIK",
    "tags": Array [
      "Disability",
      "Alberta",
    ],
    "title": "Assured Income for the Severely Handicapped (AISH)",
  },
  Object {
    "description": "Extended health coverage for seniors over 65",
    "detailLinks": Array [],
    "details": "What is it?
The Alberta Government offers extended health coverage for all seniors over 65. This helps partially cover the cost of prescription drugs, diabetic supplies, and more. 

Who is Eligible?
- All seniors over 65 (not income based) and people receiving an Alberta Widows Pension
- Alberta residents

How do I apply?
- No application is required. All you have to do is sign up with the Blue Cross and get your Blue Cross Identification card.

To subscribe for coverage contact the Blue Cross at 1–800–661-6995 or follow the link below for more information",
    "externalLink": "www.health.alberta.ca/services/drugs-seniors.html",
    "guid": "9rRXexrA3JzmXbFdKCmjtTj57l",
    "tags": Array [
      "Alberta",
      "Seniors",
      "Health",
    ],
    "title": "Blue Cross Coverage for Seniors",
  },
  Object {
    "description": "A tax-free monthly payment to families with children under 18",
    "detailLinks": Array [
      "www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4114-canada-child-benefit-related-provincial-territorial-programs/canada-child-benefit.html#P142_7327",
    ],
    "details": "What is it?
-The Canada Revenue Agency uses information from your income tax and benefit return to calculate your CCB payments 
-To receive the CCB you must file a tax return every year even if you do not have any income during the year

Who is eligible?
To be eligible for the Canada child benefit (CCB), you must meet all of the following conditions:
-You must live with the child, and the child must be under 18 years of age
-You must be primarily responsible for the care and upbringing of the child
-You must be a resident of Canada for tax purposes

You or your spouse or common-law partner must be:
-a Canadian citizen
-a permanent resident
-a protected person
-a temporary resident who has lived in Canada for the previous 18 months, and who has a valid permit in the 19th month
-an Indian within the meaning of the Indian Act

What do I need to apply?
-You do not need to reapply every year 
-Complete the RC66 Canada Child Benefit Application form (unless you already completed the Automated benefits application at your child's birth) 

For more information see the links below: 
",
    "externalLink": "www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc66.html",
    "guid": "ZPNzWEr5XfUq5aYdy2bSYIKO5T",
    "tags": Array [
      "Canada",
      "Children",
      "Tax",
    ],
    "title": "Canada Child Benefit (CCB)",
  },
  Object {
    "description": "Free money for low income families to help you save for a child's education after high school",
    "detailLinks": Array [],
    "details": "What is it?
The Canada Learning Bond is money that the Government of Canada deposits into a Registered Education Savings Plan (RESP) to help you save for a child's education after high school. The government puts in $500 for the first year and then $100 a year afterwards until the child turns 15. Applying for and receiving the Canada Learning Bond will not affect any other benefits that you or an eligible child receives.

Who is Eligible?
A Child is eligible if they are:
- born in or after 2004
- a resident of Alberta
- has a primary caregiver with an eligible income

How do I Apply?
To apply contact your bank or credit union to open an RESP and ask them to apply for the Canada Learning Bond

you can start your RESP at www.startmyRESP.ca/e4c

For more detailed information check the link below",
    "externalLink": "www.canada.ca/en/employment-social-development/services/learning-bond.html",
    "guid": "8U2rl4Ha5GXBVqjNStudvzHIch",
    "tags": Array [
      "Canada",
      "Children",
      "Education",
    ],
    "title": "Canada Learning Bond",
  },
  Object {
    "description": "Income for people with a disability and their dependant children",
    "detailLinks": Array [],
    "details": "What is it?
Canada Pension Plan - Disability (CPP-D) provides a monthly income to people who have made enough contributions to the CPP and who are disabled and cannot work at any job on a regular basis. Benefits may also be available to their dependent children.

The benefit comes in two parts:
CPP disability benefit 
A taxable monthly payment that is available to people who have contributed to the CPP and who are not able to work regularly because of a disability.
Children's benefit 
A monthly benefit for dependent children (under age 18 or between 18 and 25 and attending school full time) of someone receiving a CPP disability benefit.

Who is Eligible?
In order to be eligible someone must:
- have a severe and prolonged disability OR have a terminal illness
- be under the age of 65
- meet the CPP contribution requirements.

What do I need to Apply?
To apply you will need documentation of your disability. For more detailed information and to find the application follow the link below.

",
    "externalLink": "www.canada.ca/en/services/benefits/publicpensions/cpp/cpp-disability-benefit.html",
    "guid": "8Lqu2z4WCAP9w5sjhcAeOKuHN5",
    "tags": Array [
      "Canada",
      "Disability",
    ],
    "title": "Canada Pension Plan - Disability",
  },
  Object {
    "description": "Helps cover the costs of getting kids involved in a sports, dance teams, or other active programs for families with a low income",
    "detailLinks": Array [],
    "details": "What is it?
JumpStart is a private fund that helps to cover the cost needed to be involved in a sport or physical activity. This can include paying registration fees and/or covering the cost of equipment. You will need to apply before the fees need to be paid.

Who is Eligible?
For a child to be eligible they need to be:
- between the ages of 4-18
- need financial assistance to participate in the sport or physical activity

What do I need to Apply?
- contact information (name, postal code, telephone number and email address)
- first name, last name, gender and date of birth of the child
- details of the sport or physical activity
- amount that is being requested from Jumpstart
- the name of the non-profit/charitable/service organization (Payee) running the sport or physical activity program
- Proof of financial need such as income assessment, prior year T4 statement or three consecutive pay stubs

For more detailed information and to begin the application you can call 1-844-YES-PLAY or follow the link below.",
    "externalLink": "jumpstart.canadiantire.ca/content/microsites/jumpstart/en/apply.html",
    "guid": "NTVwRTvMb82TIB5VLbf3v36tZN",
    "tags": Array [
      "Recreation",
      "Children",
    ],
    "title": "Canadian Tire JumpStart",
  },
  Object {
    "description": "Helps pay for day care, family day homes, or out of school care for children under 12",
    "detailLinks": Array [],
    "details": "What is it?
The Alberta Child Care Subsidy is a subsidy of up to $628 per month to help cover the cost of approved family day homes, licensed day care, out of school care, or group family child care for children 0-12 years who are not yet in grade 7.
An additional $100 Extended Hours Subsidy is available for children requiring care on evenings and weekends.

Who is Eligible?
- The parent or the child receiving care are Canadian citizens or permanent residents of Canada 
- The child and parent live in Alberta
- The child is 12 years of age or younger and not yet in Grade 7
- The parent(s) are currently working, attending school, looking for work or have special needs

How do I Apply?
You can apply for both subsidies by completing the online application in the link below",
    "externalLink": "www.humanservices.alberta.ca/financial-support/15104.html",
    "guid": "K08iJHYVRGL5pBOomOvwa2zwX2",
    "tags": Array [
      "Children",
      "Alberta",
      "Childcare",
    ],
    "title": "Child Care Subsidy",
  },
  Object {
    "description": "Helps pay for eyeglasses, prescriptions and dental visits for children in families with low income",
    "detailLinks": Array [],
    "details": "What is it?
The Alberta Child Health Benefit plan pays for health services, such as dental care, eyewear, prescription drugs, ambulance services, and diabetic supplies that are not available through standard Alberta Health Care Insurance. There are no fees to sign up.

Who is Eligible?
- Families with low income who do not have any other form of government health benefits
- Children up to age 18
- Children from 18 - 20 who live at home and are still attending high school

Families receiving Health Benefits from Income Support, Indigenous Programs, or the Alberta Adult Health Benefit are NOT eligible.

How do I apply?

Complete the paper application in the link below and mail it to the included Alberta Human Services address.
",
    "externalLink": "www.alberta.ca/alberta-child-health-benefit.aspx",
    "guid": "nQXxT1OMhPGbkqkPHc2QTpofRv",
    "tags": Array [
      "Alberta",
      "Children",
      "Health",
    ],
    "title": "Child Health Benefit",
  },
  Object {
    "description": "Provides financial relief to persons with disabilities or individuals supporting persons with disabilities",
    "detailLinks": Array [],
    "details": "What is it?
The Disability Tax Credit (DTC) provides a tax refund to help support you or a dependent with a disability. You claim the credit when you file your taxes. 
If you were unaware of the DTC in previous years, you may be able to get money back by refiling your taxes. Sometimes this can be as much as $15,000. 

You need the Disability Tax Credit in order to open a Registered Disability Savings Plan (RDSP).

Who is Eligible?
A person is eligible if they meet one of the following criteria:
- is blind
- is markedly restricted in at least one of the basic activities of daily living
- is significantly restricted in two or more or the basic activities of daily living (can include a vision impairment)
- needs life-sustaining therapy

Their disability must also be:
- prolonged, which means the impairment has lasted, or is expected to last for at least 12 months
- present all or most of the time (at least 90% of the time)

How do I apply?
- Download the DTC Form (also called the T2201)
- Depending on your disability, take the form to one of these people: your family doctor, optometrist, audiologist, occupational therapist, physiotherapist, psychologist or speech/ language pathologist. 
- Get the signed form back from your practitioner. 
- Take the signed form to a Canada Revenue Agency Tax Centre

Approval can take a few months. If you are not approved with your first application please apply again as many people succeed on the second or third try.

For more detailed information and to find the application follow the link below",
    "externalLink": "www.rdsp.com/tutorial/how-do-you-apply-for-the-disability-tax-credit/",
    "guid": "UbdhHxTUe3N5zm5BxR6WQ2i6vf",
    "tags": Array [
      "Canada",
      "Tax",
      "Disability",
    ],
    "title": "Disability Tax Credit",
  },
  Object {
    "description": "Free library card which gets you access to library services",
    "detailLinks": Array [],
    "details": "What is it?
Membership with the Edmonton Public Library (EPL) gets you free access to over 13,000 programs, millions of books, movies, video games, software, and more.

Who is Eligible?
- Any resident of Edmonton

What do I need to Apply?
- An identification
- Proof of residence

You can apply online by following the link below or visit your local EPL branch to sign up",
    "externalLink": "www2.epl.ca/signup/",
    "guid": "GiufEa3ziFwfBEgkjI2gIlfNkk",
    "tags": Array [
      "Education",
      "Edmonton",
    ],
    "title": "Edmonton Public Library Card",
  },
  Object {
    "description": "Victims can get money to help recover from the effects of a crime, based on the injuries directly suffered",
    "detailLinks": Array [],
    "details": "What is it?
Victims of a crime can get money to help recover. The eligibility is based on the injuries directly suffered. There are three kinds of benefits available.
Injury benefit – for those physically / psychologically injured as a direct result of a crime
Witness benefit – for witnesses of a crime that resulted in the death of a loved one
Death benefit – reimbursement of funeral costs for victims that died as a result of violent crime

Who is Eligible?
- a victim an eligible crime
- the crime happened in Alberta – Don't need to be an Alberta resident
- reported the crime to police within a reasonable period of time
- co-operated with the investigation into the crime
- an application is received within 2 years of the date of the crime – in special circumstances this may be extended. 
- a criminal record and if you had any part in causing your injuries is also considered

Motor vehicle incidents are generally not eligible 

What do I need to apply?

To receive help either speak to the Edmonton local victim services unit by following this link: 
www.edmontonpolice.ca/CommunityPolicing/FamilyProtection/VictimServices.aspx

OR 

For more information and to find the application follow the link below
",
    "externalLink": "www.alberta.ca/help-for-victims-of-crime.aspx",
    "guid": "bzf4ryrVVsKkqpsEA5dBZd2kP5",
    "tags": Array [
      "Alberta",
    ],
    "title": "Financial Benefits for Victims of Crime",
  },
  Object {
    "description": "Extra money for eligible seniors to help increase Old Age Security payments",
    "detailLinks": Array [],
    "details": "What is it?
The Guaranteed Income Supplement (GIS) provides a monthly non-taxable benefit to eligible Old Age Security (OAS) pension recipients.

Who is Eligible?
- Seniors receiving Old Age Security
- Be living in Canada
- Meet the income eligibility 

What do I need to apply?

An application must be submitted in writing. For more detailed information and to find the application follow the link below.",
    "externalLink": "www.canada.ca/en/services/benefits/publicpensions/cpp/old-age-security/guaranteed-income-supplement.html",
    "guid": "kc0ov01FtBgr88C5P6EE6lnC8s",
    "tags": Array [
      "Seniors",
      "Canada",
    ],
    "title": "Guaranteed Income Supplement",
  },
  Object {
    "description": "Provides a wide range of additional benefits to cover the cost of things like child care, diet needs, work and school expenses, and more!",
    "detailLinks": Array [],
    "details": "What is it?
For people receiving Income Support there is a wide range of additional benefits that can help cover extra costs. This includes: childcare, special diets, utility connection fees, work-related expenses, unexpected emergencies, supports for fleeing violence, school expenses for children, and more.

Who is Eligible?
- be receiving Income Support
- have a financial need that fits into one of the categories 

What do I need to apply?
In order to apply you will need to speak to your Income Support Worker about what documentation is needed. You can find your Worker by calling 1-877-644-9992 or following the link below.",
    "externalLink": "www.alberta.ca/income-support.aspx#toc-4",
    "guid": "sgKMX0336kgepHbPeObRLOvcFL",
    "tags": Array [
      "Alberta",
      "Health",
      "Children",
      "Housing",
    ],
    "title": "Income Support - Additional Benefits",
  },
  Object {
    "description": "Provides extra money to help pay for rent for those receiving income support",
    "detailLinks": Array [],
    "details": "What is it?
The Additional Core Shelter Benefit helps provide up to an additional $300 a month to pay for rent for individuals and families receiving income support.

Who is eligible?
This benefit is for any of the following situations:
- households of six or more people
- people who need their housing adapted for a disability
- anyone whose health would be endangered by a move

What do I need to apply?
To apply you will need to bring proof of family size or a doctor's note confirming the danger of moving or need for adapted accommodation to your Income Support worker.

",
    "externalLink": "www.humanservices.alberta.ca/documents/income-support-factsheet.pdf",
    "guid": "HiGYI2bhBoQ6n82R9ptoNZ0oaQ",
    "tags": Array [
      "Housing",
      "Alberta",
    ],
    "title": "Income Support - Additional Shelter Benefit",
  },
  Object {
    "description": "Provides money to pay for basic needs like food, clothing, and shelter",
    "detailLinks": Array [],
    "details": "What is it?
Income Support provides money to pay for basic needs like food, clothing, and shelter. This is a monthly benefit that changes depending on your needs, financial resources, ability to work, and the size of your family. Albertans who are eligible for Income Support also receive: health benefits for themselves and their children, help and training to find a job, help getting child support payments.

Who is eligible?
Income Support is available for people 3 general situations:
1.	Cannot work due to chronic health problems or other barriers to employment (Barriers to Full Employment)
2.	Looking for work, working but not earning enough, or temporarily unable to work (Expected to Work)
3.	Need training so they can get a job (Learners)

This program is for Alberta Residents over 18 who have used up all Employment Insurance Benefits

What do I need to apply?
You will need the following documents to apply:
- identification
- proof of assets (if applicable)
- banking information
- proof of employment income (if employed)
- medical forms (if you cannot work)
- immigration papers if you came to Canada in the last 10 years

To receive income support you will need to complete an application and then meet with an Income Support Worker at an Alberta Works or Alberta Supports office. 

For more information and to find the application follow the link below

",
    "externalLink": "www.alberta.ca/income-support.aspx",
    "guid": "5b1J8A2fhE9cwVo9W5MfbLmuNr",
    "tags": Array [
      "Alberta",
    ],
    "title": "Income Support - Alberta Works",
  },
  Object {
    "description": "Helps cover the costs for a relative who cares for a child while the parent(s) are working or in school",
    "detailLinks": Array [],
    "details": "What is it?
Kin Child Care Subsidy is available for children who are being cared for by a relative who does not live in the same home as the child. Funding of up to $400 per month is available to eligible low- and middle-income families. 

Who is Eligible?
- Alberta Residents
-  children must be in care for a minimum of 25 hours per month for school age children and 50 hours per month for preschool children
- Parent(s) must be working, seeking work, attending post-secondary education, have a special need or have a child with a special need
- the relative caregiver must not live in the same home as the child

What do I need to Apply?

To apply fill out the online application at the link below.",
    "externalLink": "www.humanservices.alberta.ca/financial-support/15104.html",
    "guid": "iHPbkwKFsck9ZLnMePKSj5e5mz",
    "tags": Array [
      "Children",
      "Alberta",
      "Childcare",
    ],
    "title": "Kin Care Subsidy",
  },
  Object {
    "description": "Helps eligible Edmontonians access City of Edmonton Recreation, Leisure and Attraction facilities for free or at a reduced cost",
    "detailLinks": Array [],
    "details": "Leisure Access Program
 
What is it?
 
The Leisure Access Program helps you access participating City of Edmonton Recreation, Leisure and Attraction facilities for free or at a reduced cost. The program consists of two parts based on income eligibility: the Annual Program and the Monthly Pass. The Annual Program includes FREE access to the facilities as well discounts on registered programs. For people who do not qualify for the Annual program they may qualify for the Monthly Pass which includes access to participating facilities for $20/month for an individual or $70/month for a family. 
 
Who is eligible?
 
The Leisure Access Program is available to all Edmonton residents who are under the income threshold, are on AISH, are new immigrant or refugees, or a child in government care.
 
How do I apply?
 
Citizens who apply for the Leisure Access Program are automatically considered for the Ride Transit program and will be enrolled if they are eligible; you are not required to have a separate application. Complete the paper application and take it one of the City of Edmonton Community and Recreation Facilities or the Edmonton Service Center in the Edmonton Tower. Be sure to include your proof of residency and proof of income supporting documents. 

For more information and to find the application follow the link below",
    "externalLink": "www.edmonton.ca/programs_services/leisure-access-program.aspx",
    "guid": "NMh2Fu1IG5XnpOf5b6zu2t1Hh6",
    "tags": Array [
      "Edmonton",
      "Recreation",
      "Children",
      "Adult",
    ],
    "title": "Leisure Access Program",
  },
  Object {
    "description": "Provides seniors with a monthly payment to help cover the cost of living",
    "detailLinks": Array [],
    "details": "What is it?
The Old Age Security (OAS) pension is a monthly payment available to seniors aged 65 and older who are Canadian residents. Employment history does not matter for determining eligibility: you can receive the Old Age Security (OAS) pension even if you have never worked or are still working

In addition to the OAS pension, there are two more types of OAS benefits:
Allowance: If you are 60 to 64 years old and your spouse or common-law partner is receiving OAS and can get the Guaranteed Income Supplement (GIS)
Allowance for the Survivor: If you are 60 to 64 years old and you are widowed

Who is Eligible?
- 65 years old or older
- a Canadian citizen or a legal resident
- have resided in Canada for at least 10 years since the age of 18

What do I need to Apply?

For more detailed information and to begin your application follow the link below.",
    "externalLink": "www.canada.ca/en/services/benefits/publicpensions/cpp/old-age-security.html",
    "guid": "zXRcJxGzIrwhmk5LTbE4jdwBMh",
    "tags": Array [
      "Seniors",
    ],
    "title": "Old Age Security (OAS)",
  },
  Object {
    "description": "Helps cover the cost of dental or eye care for eligible seniors",
    "detailLinks": Array [],
    "details": "What is it?
The Alberta Government helps cover the cost of dental and eye care for eligible seniors. The Optical Assistance for Seniors program will reimburse eligible seniors for prescription eyeglasses. The Dental Assistance for Seniors program will reimburse eligible seniors for things like: exams, x-rays, polishing and scaling, fillings, extractions, root canals, procedures relating to gum disease, and dentures. Both programs work by providing a reimbursement for services already paid for and have a shared application process.

The Optical program does not cover eye exams, contacts, surgery, or other optical needs. 
The Dental program does not cover bridges, crowns, braces, implants, fluoride treatment, bleaching, or inlays.

Who is Eligible?
- Alberta residents who are 65 or older 
- Must be a Canadian Citizen or Permanent Resident
- Must meet the income criteria

What do I need to Apply?
To apply you will need to complete the Seniors Financial Assistance Package from the link below",
    "externalLink": "www.seniors-housing.alberta.ca/seniors/dental-optical-assistance.html",
    "guid": "1iXreywnofiF2jKKknlbKRXAtX",
    "tags": Array [
      "Alberta",
      "Seniors",
      "Health",
    ],
    "title": "Optical and Dental Assistance for Seniors",
  },
  Object {
    "description": "A tax free savings plan for people with a disability",
    "detailLinks": Array [],
    "details": "What is it?
A Registered Disability Savings Plan (RDSP) is a tax free savings account where someone who has the Disability Tax Credit can receive support to save from the government. The Government of Canada will deposit money into RDSP if you qualify for the Canada Disability Savings Bond (FREE $$) or Canada Disability Savings Grant (matched $$). Savings kept in an RDSP must be left in the account for atleast 10 years or until the age of 60 to receive the Bond or Grant.

Canada Disability Savings Bond: the Government will deposit money into RDSPs of low to modest income individuals under the age of 49.  Eligible individuals receive up to $1,000 a year to a lifetime limit of $20,000 depending on family net income. A contribution is not required to receive the Bond.
 
Canada Disability Savings Grant: the Government provides matching grants of up to $3 for every $1 an eligble person puts into their RDSP until the age of 49. The maximum grant is $3,500 each year, with a lifetime limit of $70,000. 

Who is Eligible?
- Must qualify for the Disability Tax Credit (DTC)
- Open to people under the age of 60
- Requires a valid Social Insurance Number (SIN)

There is no impact on other benefits, such as Alberta Income Support, AISH, Canada Child Tax Benefits, GST Credit, Old Age Security, and EI.

What do I need to Apply?
To open an RDSP speak to your Bank or Credit Union.",
    "externalLink": "www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-disability-savings-plan-rdsp.html",
    "guid": "BcKJhMTErAsHfXq1jzealos8kp",
    "tags": Array [
      "Canada",
      "Disability",
      "Saving",
    ],
    "title": "Registered Disability Savings Plan (RDSP)",
  },
  Object {
    "description": "A tax free savings account that both you and the government put money in to help pay for a child’s education after high school",
    "detailLinks": Array [],
    "details": "What is it?
A Registered Education Savings Plan (RESP) is a tax free savings account to help pay for a child's education after high school. The government helps build savings by matching contributions by between 20% - 40% depending on income. All children can receive 20% matched funds regardless of family income, an extra 10% - 20% is available for families with lower incomes. These matching funds are available to a lifetime maximum of $7,200. If a person cannot contribute in any given year, they are able to catch up in future years. 

Who is eligible?
- All children who live in Canada and have a SIN number
- Anyone can open an RESP for a child, not just the child's parent

What do I need to apply?
To open an RESP all that is needed is the Child's SIN number and an ID for the person opening the account.

To begin the process of opening an RESP follow the link below.",
    "externalLink": "www.startmyresp.ca/e4c",
    "guid": "oZ68OrZFpvkMMGHqV3CFELhuVY",
    "tags": Array [
      "Children",
      "Canada",
      "Education",
      "Saving",
    ],
    "title": "Registered Education Savings Plan (RESP)",
  },
  Object {
    "description": "Monthly transit pass for eligible low-income Edmontonians at a subsidized rate of $35/month. ",
    "detailLinks": Array [],
    "details": "What is it?
The Ride Transit Program gives low income Edmonton residents the ability to buy a $35 a month transit pass at certain locations.
 
Who is eligible?
 
Edmontonians whose income is at or under the Federal, before tax Low Income Cut Off (LICO)  household amounts.
 
How do I apply?
 
The Ride Transit Program has the same application process as the Leisure Access Pass. Complete the paper application and take it one of the City of Edmonton Recreation Centers or the Edmonton Service Center in the Edmonton Tower along with the required ID and proof of income.
 
If you already have the Leisure Access Pass then you can sign up online at the following link: https://www.edmonton.ca/projects_plans/transit/ride-transit-application-form.aspx
",
    "externalLink": "www.edmonton.ca/ets/subsidized-transit.aspx",
    "guid": "7Vo9xE20WJJJ1ZORDlog1odyzo",
    "tags": Array [
      "Edmonton",
      "Transit",
    ],
    "title": "Ride Transit Program",
  },
  Object {
    "description": "Annual Bus pass for seniors with a low income",
    "detailLinks": Array [],
    "details": "What is it?
Seniors with a low income can get an annual bus pass for $57.50. Passes can be used for unlimited travel on all Edmonton Transit buses, the LRT and DATS (for registered DATS users).

Who is eligible?
To be eligible you must be:
- 65 years or older
- live in Edmonton
- have a yearly personal income below $17,544

What do I need to apply?
The Senior Annual Pass can only be purchased at the Edmonton Service Centre or through the mail-in program. To apply you will need:
- Proof of age
- Proof of residency 
- Proof of income (such as a T4OAS, GIS qualification letter, or a letter from a commissioner of oaths)

For more detailed information or to begin your application follow the link below.",
    "externalLink": "www.edmonton.ca/ets/senior-fares.aspx",
    "guid": "Y5KEzulkwxviOuzB4Ny5QTzMGD",
    "tags": Array [
      "Seniors",
      "Edmonton",
      "Transit",
    ],
    "title": "Seniors Low Income Bus Pass",
  },
  Object {
    "description": "Helps pay for pre-school or early childhood development programs for children whose parent cares for them at home",
    "detailLinks": Array [],
    "details": "What is it?
Eligible families may qualify for a subsidy of up to $1,200 per year for each pre-school-aged child who attends a licensed pre-school or an approved early childhood development program.

Who is eligible?
- one parent who stays at home or works, volunteers or attends school less than 20 hours per week
- Alberta residents
- have a recent recent Notice of Assessment

What do I need to apply?
For more detailed information and to apply online follow the link below",
    "externalLink": "www.humanservices.alberta.ca/financial-support/15679.html",
    "guid": "9dHBCUXa0z8tEZg6QcYMBJVXjf",
    "tags": Array [
      "Children",
      "Alberta",
      "Childcare",
    ],
    "title": "Stay-at-Home Parent Subsidy",
  },
  Object {
    "description": "Helps people with mobility challenges to make their homes more acceessible",
    "detailLinks": Array [],
    "details": "What is it?
RAMP will provide up to $7,500  to help people with mobility challenges to modify their homes t be more accessible.

Who is eligible?
Any Albertan who has one of the following: 
-uses a wheelchair
- seniors using a wheelchair or four-wheel walker
-Anyone with a progressive neurological - degenerative disease

What do I need to apply?

Apply on-line - what specifics do they need?",
    "externalLink": "www.humanservices.alberta.ca/disability-services/residential-access-modification-program.html",
    "guid": "tWucjcIELoF0O1Z0DksuXWDGY7",
    "tags": Array [
      "Disability",
      "Alberta",
      "Housing",
    ],
    "title": "Under construction - RAMP - Residential Access Modification Program",
  },
  Object {
    "description": "Monetary benefit that helps boost the income for low income working Canadians",
    "detailLinks": Array [],
    "details": "What is it?
The Working Income Tax Benefit provides a payment to help boost the income for low income working Canadians. This payment is provided as part of a tax refund at the end of the year.

Note: you can apply for quarterly advance payments by completing the RC201 form in the link below. Advance payments are made for up to 50% of what you are eligible for with the rest being included in with your year end tax refund.

Who is Eligible?
- anyone is employed and a resident of Canada who meets the income criteria
- anyone who spends more than 90 days in prison is NOT eligible

What do I need to Apply?
- File your taxes
The Working Income Tax Benefit is included with the tax refund and is automatically calculated when you file your taxes with software. If you file your taxes with paper you will need to complete Schedule 6 included in the link below.

For more detailed information and to find the advance payment application follow the link below.",
    "externalLink": "www.canada.ca/en/revenue-agency/services/child-family-benefits/working-income-tax-benefit-witb.html",
    "guid": "IO2YsSRkLCIZwIcYGjO6rNkxUE",
    "tags": Array [
      "Canada",
      "Tax",
    ],
    "title": "Working Income Tax Benefit",
  },
  Object {
    "description": "The YMCA provides financial assistance to help reduce the cost of using YMCA facilities and programs.",
    "detailLinks": Array [],
    "details": "What is it?
 Through the YMCA Financial Assistance program, the YMCA membership and program experience is available to families at a reduced cost regardless of their ability to pay the full fees. This includes access to Health, Fitness & Aquatics centres, the Summer Camps and Day Camps, and Child Care facilities. 

Who is eligible?
Financial Assistance is available to:
- Alberta residents receiving AISH, Income Support, the Alberta Adult Health Benefit, or the Alberta Child Health Benefit
- Alberta residents with eligible income amounts

What do I need to apply?
To apply you will need:
- Identification
- Void cheque, Visa or Mastercard to process your monthly payments; or banking authorization.
- If you are applying through income eligibility you will also need: current paystubs, most recent Notice of Assessment, and a referral letter from a government or social service agency

For more detailed information and to start the application follow the link below.",
    "externalLink": "northernalberta.ymca.ca/Join-Now/Financial-Assistance",
    "guid": "EY1QV5T6AyB4Ykl2Lt1Nt9kf9g",
    "tags": Array [
      "Recreation",
      "Children",
    ],
    "title": "YMCA Financial Assistance",
  },
]
`;

exports[`/api /GET screener -- returns latest screener 1`] = `
Object {
  "conditionalQuestions": Array [
    Object {
      "conditionalQuestions": Array [],
      "controlType": "NumberInput",
      "expandable": false,
      "id": "an2swDUmzfKa61MhdziL",
      "index": 0,
      "key": "numberchildren",
      "label": "How many children do you have under 18?",
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [],
      "controlType": "NumberInput",
      "expandable": false,
      "id": "52BONWt6kVy3h4wnQnuz",
      "index": 1,
      "key": "youngestchild",
      "label": "How old is your YOUNGEST child?",
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [],
      "controlType": "Multiselect",
      "expandable": false,
      "id": "zP1jPrL6tpHVZPcpGuIy",
      "index": 5,
      "key": "",
      "label": "Who cares for your children? (Select all that apply)",
      "multiSelectOptions": Array [
        Object {
          "key": Object {
            "name": "childcare",
            "type": "boolean",
          },
          "text": "A licensed day care (such as a Day Home, Child Care Center, or Preschool)",
        },
        Object {
          "key": Object {
            "name": "stayathome",
            "type": "boolean",
          },
          "text": "A parent who stays at home",
        },
        Object {
          "key": Object {
            "name": "kincare",
            "type": "boolean",
          },
          "text": "A relative who does not live in your home",
        },
      ],
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [],
      "controlType": "Toggle",
      "expandable": false,
      "id": "DTcDYBr3aQOZPyZV2MT7",
      "index": 3,
      "key": "recreation",
      "label": "Are you looking for recreation activities for your child or children?",
      "multiSelectOptions": Array [],
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [],
      "controlType": "Toggle",
      "expandable": false,
      "id": "U9Q4lMqhGSE0pKLoyGYf",
      "index": 4,
      "key": "childdisability",
      "label": "I have a child with a disability",
      "multiSelectOptions": Array [],
      "options": Array [],
    },
  ],
  "questions": Array [
    Object {
      "conditionalQuestions": Array [],
      "controlType": "NumberInput",
      "expandable": false,
      "id": "hdPMbny6X0WNhwuiJiMt",
      "index": 0,
      "key": "grossincome",
      "label": "What is your Household's Total or Gross yearly income? (check line 150 of your tax return) Option: If you don't know your gross income, multiply your monthly income by 12.",
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [],
      "controlType": "NumberInput",
      "expandable": false,
      "id": "EVbsvHuXh8ul9x42AXCQ",
      "index": 2,
      "key": "age",
      "label": "How old are you?",
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [],
      "controlType": "Toggle",
      "expandable": false,
      "id": "VIXBl1tiUyAx8EPuZrzk",
      "index": 5,
      "key": "spouse",
      "label": "Do you have a spouse or common-law partner?",
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [
        "an2swDUmzfKa61MhdziL",
        "52BONWt6kVy3h4wnQnuz",
        "DTcDYBr3aQOZPyZV2MT7",
        "U9Q4lMqhGSE0pKLoyGYf",
        "zP1jPrL6tpHVZPcpGuIy",
      ],
      "controlType": "Toggle",
      "expandable": true,
      "id": "HVZbfiR8XkcSwJ2FFBNq",
      "index": 3,
      "key": "children",
      "label": "Do you have children under the age of 18 living with you?",
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [],
      "controlType": "Multiselect",
      "expandable": false,
      "id": "mdfIL5kSwI0w4br8oXIN",
      "index": 7,
      "key": "",
      "label": "Select all of the following that apply to you",
      "multiSelectOptions": Array [
        Object {
          "key": Object {
            "name": "disability",
            "type": "boolean",
          },
          "text": "I have a disability",
        },
        Object {
          "key": Object {
            "name": "moreschool",
            "type": "boolean",
          },
          "text": "I am going to/planning to go to school",
        },
        Object {
          "key": Object {
            "name": "victim",
            "type": "boolean",
          },
          "text": "I have been a victim of a crime I reported to the police in the last two years",
        },
        Object {
          "key": Object {
            "name": "cppcontributions",
            "type": "boolean",
          },
          "text": "I have paid into the Canada Pension Plan (CPP) for 4 of the last 6 years",
        },
        Object {
          "key": Object {
            "name": "needincome",
            "type": "boolean",
          },
          "text": "I need help to pay for basic needs (food, shelter, clothes, etc.)",
        },
        Object {
          "key": Object {
            "name": "pregnant",
            "type": "boolean",
          },
          "text": "I have high ongoing drug costs or am pregnant",
        },
      ],
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [],
      "controlType": "Multiselect",
      "expandable": false,
      "id": "xTwJ7RyLBIjfI3h2AZ4F",
      "index": 5,
      "key": "",
      "label": "What are your main sources of income?",
      "multiSelectOptions": Array [
        Object {
          "key": Object {
            "name": "aish",
            "type": "boolean",
          },
          "text": "AISH",
        },
        Object {
          "key": Object {
            "name": "albertaworks",
            "type": "boolean",
          },
          "text": "Income Support/Alberta works",
        },
        Object {
          "key": Object {
            "name": "empoyment",
            "type": "boolean",
          },
          "text": "Employment",
        },
        Object {
          "key": Object {
            "name": "oas",
            "type": "boolean",
          },
          "text": "Old Age Security",
        },
        Object {
          "key": Object {
            "name": "otherincome",
            "type": "boolean",
          },
          "text": "Other",
        },
      ],
      "options": Array [],
    },
  ],
}
`;

exports[`/api /GET:guid -- returns the specific program 1`] = `
Object {
  "description": "Free library card which gets you access to library services",
  "detailLinks": Array [],
  "details": "What is it?
Membership with the Edmonton Public Library (EPL) gets you free access to over 13,000 programs, millions of books, movies, video games, software, and more.

Who is Eligible?
- Any resident of Edmonton

What do I need to Apply?
- An identification
- Proof of residence

You can apply online by following the link below or visit your local EPL branch to sign up",
  "externalLink": "www2.epl.ca/signup/",
  "guid": "GiufEa3ziFwfBEgkjI2gIlfNkk",
  "tags": Array [
    "Education",
    "Edmonton",
  ],
  "title": "Edmonton Public Library Card",
}
`;

exports[`/api POST /notification -- returns programs 1`] = `
Array [
  Object {
    "description": "A tax-free monthly payment to families with children under 18",
    "detailLinks": Array [
      "www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4114-canada-child-benefit-related-provincial-territorial-programs/canada-child-benefit.html#P142_7327",
    ],
    "details": "What is it?
-The Canada Revenue Agency uses information from your income tax and benefit return to calculate your CCB payments 
-To receive the CCB you must file a tax return every year even if you do not have any income during the year

Who is eligible?
To be eligible for the Canada child benefit (CCB), you must meet all of the following conditions:
-You must live with the child, and the child must be under 18 years of age
-You must be primarily responsible for the care and upbringing of the child
-You must be a resident of Canada for tax purposes

You or your spouse or common-law partner must be:
-a Canadian citizen
-a permanent resident
-a protected person
-a temporary resident who has lived in Canada for the previous 18 months, and who has a valid permit in the 19th month
-an Indian within the meaning of the Indian Act

What do I need to apply?
-You do not need to reapply every year 
-Complete the RC66 Canada Child Benefit Application form (unless you already completed the Automated benefits application at your child's birth) 

For more information see the links below: 
",
    "externalLink": "www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc66.html",
    "guid": "ZPNzWEr5XfUq5aYdy2bSYIKO5T",
    "tags": Array [
      "Canada",
      "Children",
      "Tax",
    ],
    "title": "Canada Child Benefit (CCB)",
  },
  Object {
    "description": "Helps pay for eyeglasses, prescriptions and dental visits for children in families with low income",
    "detailLinks": Array [],
    "details": "What is it?
The Alberta Child Health Benefit plan pays for health services, such as dental care, eyewear, prescription drugs, ambulance services, and diabetic supplies that are not available through standard Alberta Health Care Insurance. There are no fees to sign up.

Who is Eligible?
- Families with low income who do not have any other form of government health benefits
- Children up to age 18
- Children from 18 - 20 who live at home and are still attending high school

Families receiving Health Benefits from Income Support, Indigenous Programs, or the Alberta Adult Health Benefit are NOT eligible.

How do I apply?

Complete the paper application in the link below and mail it to the included Alberta Human Services address.
",
    "externalLink": "www.alberta.ca/alberta-child-health-benefit.aspx",
    "guid": "nQXxT1OMhPGbkqkPHc2QTpofRv",
    "tags": Array [
      "Alberta",
      "Children",
      "Health",
    ],
    "title": "Child Health Benefit",
  },
  Object {
    "description": "Free library card which gets you access to library services",
    "detailLinks": Array [],
    "details": "What is it?
Membership with the Edmonton Public Library (EPL) gets you free access to over 13,000 programs, millions of books, movies, video games, software, and more.

Who is Eligible?
- Any resident of Edmonton

What do I need to Apply?
- An identification
- Proof of residence

You can apply online by following the link below or visit your local EPL branch to sign up",
    "externalLink": "www2.epl.ca/signup/",
    "guid": "GiufEa3ziFwfBEgkjI2gIlfNkk",
    "tags": Array [
      "Education",
      "Edmonton",
    ],
    "title": "Edmonton Public Library Card",
  },
  Object {
    "description": "Provides money to pay for basic needs like food, clothing, and shelter",
    "detailLinks": Array [],
    "details": "What is it?
Income Support provides money to pay for basic needs like food, clothing, and shelter. This is a monthly benefit that changes depending on your needs, financial resources, ability to work, and the size of your family. Albertans who are eligible for Income Support also receive: health benefits for themselves and their children, help and training to find a job, help getting child support payments.

Who is eligible?
Income Support is available for people 3 general situations:
1.	Cannot work due to chronic health problems or other barriers to employment (Barriers to Full Employment)
2.	Looking for work, working but not earning enough, or temporarily unable to work (Expected to Work)
3.	Need training so they can get a job (Learners)

This program is for Alberta Residents over 18 who have used up all Employment Insurance Benefits

What do I need to apply?
You will need the following documents to apply:
- identification
- proof of assets (if applicable)
- banking information
- proof of employment income (if employed)
- medical forms (if you cannot work)
- immigration papers if you came to Canada in the last 10 years

To receive income support you will need to complete an application and then meet with an Income Support Worker at an Alberta Works or Alberta Supports office. 

For more information and to find the application follow the link below

",
    "externalLink": "www.alberta.ca/income-support.aspx",
    "guid": "5b1J8A2fhE9cwVo9W5MfbLmuNr",
    "tags": Array [
      "Alberta",
    ],
    "title": "Income Support - Alberta Works",
  },
  Object {
    "description": "Helps eligible Edmontonians access City of Edmonton Recreation, Leisure and Attraction facilities for free or at a reduced cost",
    "detailLinks": Array [],
    "details": "Leisure Access Program
 
What is it?
 
The Leisure Access Program helps you access participating City of Edmonton Recreation, Leisure and Attraction facilities for free or at a reduced cost. The program consists of two parts based on income eligibility: the Annual Program and the Monthly Pass. The Annual Program includes FREE access to the facilities as well discounts on registered programs. For people who do not qualify for the Annual program they may qualify for the Monthly Pass which includes access to participating facilities for $20/month for an individual or $70/month for a family. 
 
Who is eligible?
 
The Leisure Access Program is available to all Edmonton residents who are under the income threshold, are on AISH, are new immigrant or refugees, or a child in government care.
 
How do I apply?
 
Citizens who apply for the Leisure Access Program are automatically considered for the Ride Transit program and will be enrolled if they are eligible; you are not required to have a separate application. Complete the paper application and take it one of the City of Edmonton Community and Recreation Facilities or the Edmonton Service Center in the Edmonton Tower. Be sure to include your proof of residency and proof of income supporting documents. 

For more information and to find the application follow the link below",
    "externalLink": "www.edmonton.ca/programs_services/leisure-access-program.aspx",
    "guid": "NMh2Fu1IG5XnpOf5b6zu2t1Hh6",
    "tags": Array [
      "Edmonton",
      "Recreation",
      "Children",
      "Adult",
    ],
    "title": "Leisure Access Program",
  },
  Object {
    "description": "Monthly transit pass for eligible low-income Edmontonians at a subsidized rate of $35/month. ",
    "detailLinks": Array [],
    "details": "What is it?
The Ride Transit Program gives low income Edmonton residents the ability to buy a $35 a month transit pass at certain locations.
 
Who is eligible?
 
Edmontonians whose income is at or under the Federal, before tax Low Income Cut Off (LICO)  household amounts.
 
How do I apply?
 
The Ride Transit Program has the same application process as the Leisure Access Pass. Complete the paper application and take it one of the City of Edmonton Recreation Centers or the Edmonton Service Center in the Edmonton Tower along with the required ID and proof of income.
 
If you already have the Leisure Access Pass then you can sign up online at the following link: https://www.edmonton.ca/projects_plans/transit/ride-transit-application-form.aspx
",
    "externalLink": "www.edmonton.ca/ets/subsidized-transit.aspx",
    "guid": "7Vo9xE20WJJJ1ZORDlog1odyzo",
    "tags": Array [
      "Edmonton",
      "Transit",
    ],
    "title": "Ride Transit Program",
  },
]
`;

exports[`/protected /key/ can create a new key 1`] = `
Object {
  "update": true,
}
`;

exports[`/protected /key/ can get all keys 1`] = `
Array [
  Object {
    "name": "age",
    "type": "integer",
  },
  Object {
    "name": "aish",
    "type": "boolean",
  },
  Object {
    "name": "albertaworks",
    "type": "boolean",
  },
  Object {
    "name": "childcare",
    "type": "boolean",
  },
  Object {
    "name": "childdisability",
    "type": "boolean",
  },
  Object {
    "name": "children",
    "type": "boolean",
  },
  Object {
    "name": "cppcontributions",
    "type": "boolean",
  },
  Object {
    "name": "disability",
    "type": "boolean",
  },
  Object {
    "name": "empoyment",
    "type": "boolean",
  },
  Object {
    "name": "grossincome",
    "type": "integer",
  },
  Object {
    "name": "grosspersonal",
    "type": "integer",
  },
  Object {
    "name": "kincare",
    "type": "boolean",
  },
  Object {
    "name": "moreschool",
    "type": "boolean",
  },
  Object {
    "name": "needincome",
    "type": "boolean",
  },
  Object {
    "name": "needs",
    "type": "integer",
  },
  Object {
    "name": "netincome",
    "type": "integer",
  },
  Object {
    "name": "number",
    "type": "integer",
  },
  Object {
    "name": "numberchildren",
    "type": "integer",
  },
  Object {
    "name": "oas",
    "type": "boolean",
  },
  Object {
    "name": "otherincome",
    "type": "boolean",
  },
  Object {
    "name": "pregnant",
    "type": "boolean",
  },
  Object {
    "name": "recreation",
    "type": "boolean",
  },
  Object {
    "name": "spouse",
    "type": "boolean",
  },
  Object {
    "name": "stayathome",
    "type": "boolean",
  },
  Object {
    "name": "test",
    "type": "boolean",
  },
  Object {
    "name": "victim",
    "type": "boolean",
  },
  Object {
    "name": "youngestchild",
    "type": "integer",
  },
]
`;

exports[`/protected /login POST /login will return { created: true }, authentication is handled by reverse proxy 1`] = `
Object {
  "created": true,
}
`;

exports[`/protected /program -- CRUD with program datastructures  GET /program will return all programs and their queries 1`] = `
Array [
  "1iXreywnofiF2jKKknlbKRXAtX",
  "1lKYPN8nNaAMldGufGZNEwfjIK",
  "5b1J8A2fhE9cwVo9W5MfbLmuNr",
  "7Vo9xE20WJJJ1ZORDlog1odyzo",
  "8Lqu2z4WCAP9w5sjhcAeOKuHN5",
  "8U2rl4Ha5GXBVqjNStudvzHIch",
  "9dHBCUXa0z8tEZg6QcYMBJVXjf",
  "9rRXexrA3JzmXbFdKCmjtTj57l",
  "BcKJhMTErAsHfXq1jzealos8kp",
  "bzf4ryrVVsKkqpsEA5dBZd2kP5",
  "EY1QV5T6AyB4Ykl2Lt1Nt9kf9g",
  "GiufEa3ziFwfBEgkjI2gIlfNkk",
  "HiGYI2bhBoQ6n82R9ptoNZ0oaQ",
  "hp5mupqcVY8ZMiKg7Q91Uoi4Wf",
  "iHPbkwKFsck9ZLnMePKSj5e5mz",
  "IO2YsSRkLCIZwIcYGjO6rNkxUE",
  "JIcpL1cap5Eg0ikPk2tecp6JG7",
  "K08iJHYVRGL5pBOomOvwa2zwX2",
  "kc0ov01FtBgr88C5P6EE6lnC8s",
  "NMh2Fu1IG5XnpOf5b6zu2t1Hh6",
  "nQXxT1OMhPGbkqkPHc2QTpofRv",
  "NTVwRTvMb82TIB5VLbf3v36tZN",
  "OGR28icdrofstoYETvIGg19XAv",
  "oZ68OrZFpvkMMGHqV3CFELhuVY",
  "sgKMX0336kgepHbPeObRLOvcFL",
  "tWucjcIELoF0O1Z0DksuXWDGY7",
  "UbdhHxTUe3N5zm5BxR6WQ2i6vf",
  "Y5KEzulkwxviOuzB4Ny5QTzMGD",
  "ZPNzWEr5XfUq5aYdy2bSYIKO5T",
  "zXRcJxGzIrwhmk5LTbE4jdwBMh",
]
`;

exports[`/protected /program -- CRUD with program datastructures POST /program will create a new program and the queries 1`] = `
Object {
  "created": true,
}
`;

exports[`/protected /program -- CRUD with program datastructures PUT /program will update a program data 1`] = `
Object {
  "updated": false,
}
`;

exports[`/protected /program-description/, can update a user facing program information can update an existing program 1`] = `
Object {
  "created": null,
  "result": "created",
}
`;

exports[`/protected /query can delete, create or update queries can delete a query 1`] = `
Object {
  "deleted": true,
  "found": true,
}
`;

exports[`/protected /query can delete, create or update queries can post a new query 1`] = `
Object {
  "created": null,
  "result": "created",
}
`;

exports[`/protected /query can delete, create or update queries can update an existing query 1`] = `
Object {
  "created": null,
  "result": "updated",
}
`;

exports[`/protected /screener/ can get the screener with keys 1`] = `
Object {
  "conditionalQuestions": Array [
    Object {
      "conditionalQuestions": Array [],
      "controlType": "NumberInput",
      "expandable": false,
      "id": "an2swDUmzfKa61MhdziL",
      "index": 0,
      "key": "numberchildren",
      "label": "How many children do you have under 18?",
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [],
      "controlType": "NumberInput",
      "expandable": false,
      "id": "52BONWt6kVy3h4wnQnuz",
      "index": 1,
      "key": "youngestchild",
      "label": "How old is your YOUNGEST child?",
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [],
      "controlType": "Multiselect",
      "expandable": false,
      "id": "zP1jPrL6tpHVZPcpGuIy",
      "index": 5,
      "key": "",
      "label": "Who cares for your children? (Select all that apply)",
      "multiSelectOptions": Array [
        Object {
          "key": Object {
            "name": "childcare",
            "type": "boolean",
          },
          "text": "A licensed day care (such as a Day Home, Child Care Center, or Preschool)",
        },
        Object {
          "key": Object {
            "name": "stayathome",
            "type": "boolean",
          },
          "text": "A parent who stays at home",
        },
        Object {
          "key": Object {
            "name": "kincare",
            "type": "boolean",
          },
          "text": "A relative who does not live in your home",
        },
      ],
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [],
      "controlType": "Toggle",
      "expandable": false,
      "id": "DTcDYBr3aQOZPyZV2MT7",
      "index": 3,
      "key": "recreation",
      "label": "Are you looking for recreation activities for your child or children?",
      "multiSelectOptions": Array [],
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [],
      "controlType": "Toggle",
      "expandable": false,
      "id": "U9Q4lMqhGSE0pKLoyGYf",
      "index": 4,
      "key": "childdisability",
      "label": "I have a child with a disability",
      "multiSelectOptions": Array [],
      "options": Array [],
    },
  ],
  "keys": Array [
    Object {
      "name": "age",
      "type": "integer",
    },
    Object {
      "name": "aish",
      "type": "boolean",
    },
    Object {
      "name": "albertaworks",
      "type": "boolean",
    },
    Object {
      "name": "childcare",
      "type": "boolean",
    },
    Object {
      "name": "childdisability",
      "type": "boolean",
    },
    Object {
      "name": "children",
      "type": "boolean",
    },
    Object {
      "name": "cppcontributions",
      "type": "boolean",
    },
    Object {
      "name": "disability",
      "type": "boolean",
    },
    Object {
      "name": "empoyment",
      "type": "boolean",
    },
    Object {
      "name": "grossincome",
      "type": "integer",
    },
    Object {
      "name": "grosspersonal",
      "type": "integer",
    },
    Object {
      "name": "kincare",
      "type": "boolean",
    },
    Object {
      "name": "moreschool",
      "type": "boolean",
    },
    Object {
      "name": "needincome",
      "type": "boolean",
    },
    Object {
      "name": "needs",
      "type": "integer",
    },
    Object {
      "name": "netincome",
      "type": "integer",
    },
    Object {
      "name": "number",
      "type": "integer",
    },
    Object {
      "name": "numberchildren",
      "type": "integer",
    },
    Object {
      "name": "oas",
      "type": "boolean",
    },
    Object {
      "name": "otherincome",
      "type": "boolean",
    },
    Object {
      "name": "pregnant",
      "type": "boolean",
    },
    Object {
      "name": "recreation",
      "type": "boolean",
    },
    Object {
      "name": "spouse",
      "type": "boolean",
    },
    Object {
      "name": "stayathome",
      "type": "boolean",
    },
    Object {
      "name": "test",
      "type": "boolean",
    },
    Object {
      "name": "undefined",
      "type": "boolean",
    },
    Object {
      "name": "victim",
      "type": "boolean",
    },
    Object {
      "name": "youngestchild",
      "type": "integer",
    },
  ],
  "questions": Array [
    Object {
      "conditionalQuestions": Array [],
      "controlType": "NumberInput",
      "expandable": false,
      "id": "hdPMbny6X0WNhwuiJiMt",
      "index": 0,
      "key": "grossincome",
      "label": "What is your Household's Total or Gross yearly income? (check line 150 of your tax return) Option: If you don't know your gross income, multiply your monthly income by 12.",
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [],
      "controlType": "NumberInput",
      "expandable": false,
      "id": "EVbsvHuXh8ul9x42AXCQ",
      "index": 2,
      "key": "age",
      "label": "How old are you?",
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [],
      "controlType": "Toggle",
      "expandable": false,
      "id": "VIXBl1tiUyAx8EPuZrzk",
      "index": 5,
      "key": "spouse",
      "label": "Do you have a spouse or common-law partner?",
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [
        "an2swDUmzfKa61MhdziL",
        "52BONWt6kVy3h4wnQnuz",
        "DTcDYBr3aQOZPyZV2MT7",
        "U9Q4lMqhGSE0pKLoyGYf",
        "zP1jPrL6tpHVZPcpGuIy",
      ],
      "controlType": "Toggle",
      "expandable": true,
      "id": "HVZbfiR8XkcSwJ2FFBNq",
      "index": 3,
      "key": "children",
      "label": "Do you have children under the age of 18 living with you?",
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [],
      "controlType": "Multiselect",
      "expandable": false,
      "id": "mdfIL5kSwI0w4br8oXIN",
      "index": 7,
      "key": "",
      "label": "Select all of the following that apply to you",
      "multiSelectOptions": Array [
        Object {
          "key": Object {
            "name": "disability",
            "type": "boolean",
          },
          "text": "I have a disability",
        },
        Object {
          "key": Object {
            "name": "moreschool",
            "type": "boolean",
          },
          "text": "I am going to/planning to go to school",
        },
        Object {
          "key": Object {
            "name": "victim",
            "type": "boolean",
          },
          "text": "I have been a victim of a crime I reported to the police in the last two years",
        },
        Object {
          "key": Object {
            "name": "cppcontributions",
            "type": "boolean",
          },
          "text": "I have paid into the Canada Pension Plan (CPP) for 4 of the last 6 years",
        },
        Object {
          "key": Object {
            "name": "needincome",
            "type": "boolean",
          },
          "text": "I need help to pay for basic needs (food, shelter, clothes, etc.)",
        },
        Object {
          "key": Object {
            "name": "pregnant",
            "type": "boolean",
          },
          "text": "I have high ongoing drug costs or am pregnant",
        },
      ],
      "options": Array [],
    },
    Object {
      "conditionalQuestions": Array [],
      "controlType": "Multiselect",
      "expandable": false,
      "id": "xTwJ7RyLBIjfI3h2AZ4F",
      "index": 5,
      "key": "",
      "label": "What are your main sources of income?",
      "multiSelectOptions": Array [
        Object {
          "key": Object {
            "name": "aish",
            "type": "boolean",
          },
          "text": "AISH",
        },
        Object {
          "key": Object {
            "name": "albertaworks",
            "type": "boolean",
          },
          "text": "Income Support/Alberta works",
        },
        Object {
          "key": Object {
            "name": "empoyment",
            "type": "boolean",
          },
          "text": "Employment",
        },
        Object {
          "key": Object {
            "name": "oas",
            "type": "boolean",
          },
          "text": "Old Age Security",
        },
        Object {
          "key": Object {
            "name": "otherincome",
            "type": "boolean",
          },
          "text": "Other",
        },
      ],
      "options": Array [],
    },
  ],
}
`;

exports[`/protected /screener/ can post a new screener 1`] = `
Object {
  "created": null,
}
`;
